Fix components looking too big

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,3 @@
-.sag-logo {
+.sag-logo-drop-shadow {
   filter: drop-shadow(1px 1px 1px rgb(0, 0, 0));
 }
