--- a/src/pages/Home/components/Sidebar/Sidebar.css
+++ b/src/pages/Home/components/Sidebar/Sidebar.css
@@ -69,7 +69,7 @@
 }
 
 .sag-sidebar-collapse-button-icon {
-  padding: 0 0.4rem;
+  padding: 0 0.6rem 0 0.3rem;
 }
 .sag-icon > svg {
   fill: black;
